Make pipeline non static