@@ -2,6 +2,7 @@ package com.faforever.neroxis.mask;
 
 import com.faforever.neroxis.map.SymmetrySettings;
 import com.faforever.neroxis.map.SymmetryType;
+import com.faforever.neroxis.util.Pipeline;
 import com.faforever.neroxis.util.functional.ToIntBiIntFunction;
 import com.faforever.neroxis.util.functional.TriIntConsumer;
 import com.faforever.neroxis.util.vector.Vector2;
@@ -19,7 +20,7 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     private int[][] mask;
 
     public IntegerMask(int size, Long seed, SymmetrySettings symmetrySettings) {
-        this(size, seed, symmetrySettings, null, false);
+        this(size, seed, symmetrySettings, null, null);
     }
 
     /**
@@ -29,14 +30,14 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
      * @param seed             Random seed of the mask
      * @param symmetrySettings symmetrySettings to enforce on the mask
      * @param name             name of the mask
-     * @param parallel         whether to parallelize mask operations
+     * @param pipeline         whether to parallelize mask operations
      */
-    public IntegerMask(int size, Long seed, SymmetrySettings symmetrySettings, String name, boolean parallel) {
-        super(size, seed, symmetrySettings, name, parallel);
+    public IntegerMask(int size, Long seed, SymmetrySettings symmetrySettings, String name, Pipeline pipeline) {
+        super(size, seed, symmetrySettings, name, pipeline);
     }
 
     public IntegerMask(int size, Long seed, SymmetrySettings symmetrySettings, String name) {
-        this(size, seed, symmetrySettings, name, false);
+        this(size, seed, symmetrySettings, name, null);
     }
 
     IntegerMask(IntegerMask other) {
@@ -52,27 +53,27 @@ public final class IntegerMask extends PrimitiveMask<Integer, IntegerMask> {
     }
 
     public IntegerMask(BooleanMask other, int low, int high, String name) {
-        this(other.getSize(), other.getNextSeed(), other.getSymmetrySettings(), name, other.isParallel());
+        this(other.getSize(), other.getNextSeed(), other.getSymmetrySettings(), name, other.getPipeline());
         enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             apply((x, y) -> setPrimitive(x, y, source.getPrimitive(x, y) ? high : low));
         }, other);
     }
 
     public IntegerMask(BufferedImage sourceImage, Long seed, SymmetrySettings symmetrySettings, String name) {
-        this(sourceImage, seed, symmetrySettings, name, false);
+        this(sourceImage, seed, symmetrySettings, name, null);
     }
 
     public IntegerMask(BufferedImage sourceImage, Long seed, SymmetrySettings symmetrySettings, String name,
-                       boolean parallel) {
-        this(sourceImage.getHeight(), seed, symmetrySettings, name, parallel);
+                       Pipeline pipeline) {
+        this(sourceImage.getHeight(), seed, symmetrySettings, name, pipeline);
         DataBuffer imageBuffer = sourceImage.getRaster().getDataBuffer();
         int size = getSize();
         apply((x, y) -> setPrimitive(x, y, imageBuffer.getElem(x + y * size)));
     }
 
     public IntegerMask(BufferedImage sourceImage, Long seed, SymmetrySettings symmetrySettings) {
-        this(sourceImage, seed, symmetrySettings, null, false);
+        this(sourceImage, seed, symmetrySettings, null, null);
     }
 
     private void setPrimitive(int x, int y, int value) {
